# claudecode-terminal

./: .env.example  .gitignore  .pdca-status.json  Dockerfile  LICENSE  README.md  docker-compose.test.yml  pyproject.toml
docs/: README.ja.md  README.ko.md  README.zh.md
docs/archive/2026-02/: _INDEX.md
docs/archive/2026-02/claudecode-terminal/: claudecode-terminal.analysis.md  claudecode-terminal.design.md  claudecode-terminal.plan.md  claudecode-terminal.report.md
src/claudecode_terminal/: __init__.py  __main__.py  cli.py  config.py  daemon.py
src/claudecode_terminal/bot/: app.py  handlers.py  security.py
src/claudecode_terminal/services/: blacklist.py  claude.py  shell.py
src/claudecode_terminal/storage/: database.py  models.py
src/claudecode_terminal/utils/: formatting.py  system.py
tests/: conftest.py  test_claude.py  test_cli.py  test_config.py  test_database.py  test_formatting.py  test_security.py  test_shell.py
